# metapatch

./: Cargo.toml  README.md
portal-solutions-metapatch-core/: Cargo.toml
portal-solutions-metapatch-core/src/: lib.rs  snapshot.rs  trapcard.rs  wasimap.rs
